RunInspectionToolのseverity判定をプロファイル設定に基づくよう修正し、全警告を解消
- severity判定をProblemHighlightTypeからHighlightDisplayLevelに変更し、
  IntelliJプロファイルの設定(No Highlight等)を正しく反映するように修正
- 非推奨API(CallToolResult/SyncToolSpecification)をbuilderパターンに移行
- DataFlowIssue、未使用import、コードスタイル等の警告を全ファイルで修正